# f1stats_prefetcher

./: .gitignore  main.py  pyproject.toml  requirements.txt
_repository/: engine.py  repository.py
_services/: circuits.py  drivers.py  enums.py  event_formats.py  events.py  fetcher.py  laps.py  results.py  seasons.py  session_type_selector.py  teams.py  telemetry.py
_services/UploadNotifier/: push_sender.py  upload_notifier.py
season/[season]/: initialize.py
season/[season]/event/[event]/session/[session]/: populate.py
static/championships/: f1-locations-2024.json  f1-locations-2025.json
