[project]
name = "f1stats-prefetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastf1>=3.5.3",
    "psycopg2-binary>=2.9.10",
    "pycountry>=24.6.1",
    "pywebpush>=2.1.2",
    "sanic[ext]>=25.3.0",
    "sqlalchemy>=2.0.41",
]
